# rag-ros2

./: README.md  create_finetune_dataset  docker-compose.yml  etl_pipeline.py  evaluate.py  feature_engineering.py  finetune_dataset.json  finetuning.py  gradio_interface.py  pyproject.toml  requirements.txt  run_tasks.py
