[tool.poetry]
name = "rag"
version = "0.1.0"
description = "RAG Project"
authors = ["komal-b <komalbagwe1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.10.1"
bs4 = "^0.0.2"
youtube-transcript-api = {version = "^0.6.3", python = ">=3.8,<3.14"}
clearml = "^1.16.5"
loguru = "^0.7.3"
tqdm = "^4.67.1"
transformers = "^4.3.2"
torch = "^2.5.1"
qdrant-client = "^1.12.1"
gradio = "^5.8.0"
sentencepiece = "^0.2.0"
datasets = "^3.1.0"
trl = "^0.12.2"
ollama = "^0.4.4"

[tool.poetry.scripts]
up = "docker-compose up -d"
down = "docker-compose down"
start-clearml = "clearml-init"
gradio-app = "python gradio_interface.py"
rag-fine-tuning-start = "python run_tasks.py'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
